2019-10-28  Martin Sebor  <msebor@redhat.com>

	PR c/66970
	* doc/cpp.texi (__has_builtin): Document.
	* doc/extend.texi (__builtin_frob_return_addr): Correct spelling.

2019-10-28  Mihailo Stojanovic  <mistojanovic@wavecomp.com>

	PR target/82981
	* config/mips/mips.md (<u>mulditi3): Generate patterns for high
	doubleword and low doubleword result of multiplication on
	MIPS64R6.

	* config/mips/mips.c (DIRECT_BUILTIN_PURE): New macro. Add a
	pure qualifier to the built-in.
	(MSA_BUILTIN_PURE): New macro. Add a pure qualifier to the MSA
	built-ins.
	(struct mips_builtin_description): Add is_pure flag.
	(mips_init_builtins): Mark built-in as pure if the flag in the
	corresponding mips_builtin_description struct is set.

	* config/mips/mips-msa.md (msa_insert_<msaftm_f>): Add an
	alternative which covers the floating-point input value. Also
	forbid the split of insert.d pattern for floating-point values.

2019-10-28  Andrew Burgess  <andrew.burgess@embecosm.com>

	* config.gcc: Add riscv-sr.o to extra_objs for riscv.
	* config/riscv/riscv-sr.c: New file.
	* config/riscv/riscv.c (riscv_reorg): New function.
	(TARGET_MACHINE_DEPENDENT_REORG): Define.
	* config/riscv/riscv.h (SIBCALL_REG_P): Define.
	(riscv_remove_unneeded_save_restore_calls): Declare.
	* config/riscv/t-riscv (riscv-sr.o): New build rule.

2019-10-28  Prathamesh Kulkarni  <prathamesh.kulkarni@linaro.org>

	PR tree-optimization/92163
	* tree-ssa-dse.c (delete_dead_or_redundant_assignment): New param
	need_eh_cleanup with default value NULL. Gate on need_eh_cleanup
	before calling bitmap_set_bit.
	(dse_optimize_redundant_stores): Pass global need_eh_cleanup to
	delete_dead_or_redundant_assignment.
	(dse_dom_walker::dse_optimize_stmt): Likewise.
	* tree-ssa-dse.h (delete_dead_or_redundant_assignment): Adjust prototype.

2019-10-28  Prathamesh Kulkarni  <prathamesh.kulkarni@linaro.org>

	PR middle-end/91272
	* tree-vect-stmts.c (vectorizable_condition): Support